[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
aes = "0.8.3"
async-std = "1.12.0"
base64 = "0.21.5"
build_html = "2.4.0"
bytes = "1.5.0"
chrono = "0.4.31"
env_logger = "0.10.0"
error-chain = "0.12.4"
glob = "0.3.1"
image = "0.24.7"
rand = "0.8.5"
rocket = "0.5.0"
rouille = "3.6.2"
tokio = "1.33.0"
