[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bincode = "1.3.3"
bytes = "1.5.0"
chrono = "0.4.31"
env_logger = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
tokio = "1.33.0"
steganography = "*"
